--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: #FFB300;
+    background-color: #e5e5e5;
+    color: #19282F;
 }
 
 .header-text {
@@ -25,10 +26,14 @@ body {
     flex-wrap: wrap;
     width: 800px;
     height: 500px;
-    border: 1px solid black;
+    border: none;
     margin: 12px;
     padding: 16px;
-    border-radius: 4px;
+    border-radius: 12px;
+    background-color: #ffffff;
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
 }
 
 .second-part {
@@ -36,14 +41,19 @@ body {
 }
 
 .appointments {
+    background-color: #ffffff;
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
     flex: 1;
     height: 300px;
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 12px;
     margin: 12px;
 }
 
 .todos {
+    background-color: #eee;
     display: flex;
     align-items: center;
     border: 1px solid black;
@@ -66,7 +76,8 @@ body {
 }
 
 .day {
-        background-color: #6200EE;
+    background-color: #F5F2E7;
+
     display: flex;
     justify-content: center;
     padding-top: 25px;
@@ -74,16 +85,30 @@ body {
     width: 100px;
     height: 75px;
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 12px;
     font-size: 24px;
 }
 
 .day:hover {
     cursor: pointer;
+    -webkit-box-shadow: 0px 0px 34px -3px rgba(0, 15, 255, 1);
+    -moz-box-shadow: 0px 0px 34px -3px rgba(0, 15, 255, 1);
+    box-shadow: 0px 0px 34px -3px rgba(0, 15, 255, 1);
+    font-size: 28px;
+
+
 }
 
 .selected { 
-    background-color: red;
+    -webkit-box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
+    -moz-box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
+    box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
+}
+
+.selected:hover{ 
+    -webkit-box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
+    -moz-box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
+    box-shadow: inset 0px 0px 34px 1px rgba(0, 15, 255, 1);
 }
 
 .circle {
@@ -94,7 +119,11 @@ body {
 }
 
 .inputs {
-    border: 1px solid black;
+    background-color: #ffffff;
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    border-radius: 12px;
     flex: 1;
     height: 216px;
     margin: 12px;
@@ -106,4 +135,15 @@ body {
     padding: 25px;
     margin: 25px;
     outline: none;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.save-button-input {
+    background-color: black;
+    margin-bottom: 0px;
+} 
+
+.button {
+    padding: 10px 16px;
 }
