--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     display: flex;
 }
 
-.calendar {
+.calendar-container {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
