--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
     flex: 1;
     height: 300px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 12px;
     margin: 12px;
 }
@@ -61,6 +61,10 @@ body {
     margin: 12px;
     height: 50px;
     border-radius: 4px;
+    border-radius: 8px 8px 8px 20px;
+    -webkit-box-shadow: inset -14px 14px 12px -15px rgba(0, 20, 255, 1);
+    -moz-box-shadow: inset -14px 14px 12px -15px rgba(0, 20, 255, 1);
+    box-shadow: inset -14px 14px 12px -15px rgba(0, 20, 255, 1);
 }
 
 .todos-title {
@@ -126,20 +130,35 @@ body {
     margin: 12px;
 }
 
+
 .appointment-title {
     width: 400px;
     height: 30px;
     padding: 25px;
-    margin: 25px;
+    margin-top: 25px;
+    margin-left: 40px;
     outline: none;
     font-size: 20px;
     font-weight: 600;
 }
 
 .save-button-input {
-    background-color: black;
-    margin-bottom: 0px;
+    display: flex;
+    justify-content: space-around;
+    width: 400px;
+    margin-top: 25px;
+    margin-left: 40px;
+    margin-bottom: 25px;
 } 
+
+.footer-second-part {
+    height: 38px;
+    background-color: black;
+}
+
+.footer-second-part__text {
+    color: #00ff84!;
+}
 
 .button {
     padding: 10px 16px;
